# zprove

./: .gitignore  Cargo.toml
crates/p3-uni-stark/: Cargo.toml
crates/p3-uni-stark/src/: check_constraints.rs  config.rs  folder.rs  lib.rs  preprocessed.rs  proof.rs  prover.rs  sub_builder.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs  timing.rs  verifier.rs
crates/zprove-bench/: Cargo.toml
crates/zprove-bench/src/: main.rs
crates/zprove-core/: Cargo.toml
crates/zprove-core/benches/: sementic_proof_gen.rs
crates/zprove-core/src/: byte_table.rs  execute.rs  lib.rs  memory_proof.rs  semantic_proof.rs  sementic_proof.rs  transition.rs  zk_proof.rs
crates/zprove-core/src/zk_proof/: air_cache.rs  batch.rs  challenger_air.rs  fri_air.rs  keccak.rs  lut.rs  m31ext3_air.rs  memory.rs  merkle_air.rs  mod.rs  poseidon2_air.rs  preprocessed.rs  recursive.rs  stack_consistency.rs  stack_ir.rs  stack_rw.rs  stage_a.rs  stark_verifier_air.rs  storage.rs  types.rs  write_delta.rs
crates/zprove-core/tests/: byte_table_tests.rs  logup_integration_tests.rs  memory_proof_tests.rs  phase2_chain_tests.rs  phase3_air_tests.rs  semantic_proof_tests.rs  transition_tests.rs  zk_proof_tests.rs
crates/zprove-revm-tests/: Cargo.toml
crates/zprove-revm-tests/src/: main.rs
crates/zprove-revm-tests/tests/: revm_execute.rs
docs/: p3-api-reference.md  stwo-api-reference.md
plans/: gpu-parallel-proving.md  oracle-removal-progress.md  recursive-proving.md  roadmap.md  soundness-gap-fixes.md  state-transition-with-merkle.md
