[workspace]
resolver = "3"
members = ["crates/zprove-core"]

[workspace.dependencies]
alloy-consensus = "1.7.3"
alloy-eips = "1.7.3"
alloy-provider = "1.7.3"
anyhow = "1.0.102"
indicatif = "0.18.4"
revm = { version = "34", features = ["std", "alloydb", "tracer"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
